fix: openapi body parameters
